// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PagedTable > does not break on empty data 1`] = `
<DocumentFragment>
  <div
    class="kfp-viewer-table "
  >
    <div
      aria-label="Table output"
      class="kfp-viewer-table-scroll"
      role="region"
      tabindex="0"
    >
      <table
        aria-label="Table output"
      >
        <tbody
          class="kfp-viewer-table-unlabelled"
        >
          <tr
            style="height: 300px;"
          >
            <td
              colspan="1"
            />
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="kfp-viewer-table-pagination"
    >
      <label>
        Rows per page
        <select
          class="kfp-viewer-select"
        >
          <option
            value="10"
          >
            10
          </option>
          <option
            value="25"
          >
            25
          </option>
          <option
            value="50"
          >
            50
          </option>
          <option
            value="100"
          >
            100
          </option>
        </select>
      </label>
      <span
        aria-live="polite"
      >
        0–0 of 0
      </span>
      <button
        aria-label="Go to previous page"
        class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-transparent text-foreground-2 hover:bg-muted hover:text-foreground size-[34px] p-0"
        data-disabled=""
        data-slot="button"
        disabled=""
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-left"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
      </button>
      <button
        aria-label="Go to next page"
        class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-transparent text-foreground-2 hover:bg-muted hover:text-foreground size-[34px] p-0"
        data-disabled=""
        data-slot="button"
        disabled=""
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PagedTable > does not break on no config 1`] = `<DocumentFragment />`;

exports[`PagedTable > renders simple data 1`] = `
<DocumentFragment>
  <div
    class="kfp-viewer-table "
  >
    <div
      aria-label="Table output"
      class="kfp-viewer-table-scroll"
      role="region"
      tabindex="0"
    >
      <table
        aria-label="Table output"
      >
        <thead>
          <tr>
            <th
              aria-sort="ascending"
              scope="col"
            >
              <button
                aria-label="field1"
                class="kfp-viewer-table-sort"
              >
                field1
                <svg
                  aria-hidden="true"
                  class="lucide lucide-arrow-up"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m5 12 7-7 7 7"
                  />
                  <path
                    d="M12 19V5"
                  />
                </svg>
              </button>
            </th>
            <th
              aria-sort="none"
              scope="col"
            >
              <button
                aria-label="field2"
                class="kfp-viewer-table-sort"
              >
                field2
                <svg
                  aria-hidden="true"
                  class="lucide lucide-arrow-up-down"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21 16-4 4-4-4"
                  />
                  <path
                    d="M17 20V4"
                  />
                  <path
                    d="m3 8 4-4 4 4"
                  />
                  <path
                    d="M7 4v16"
                  />
                </svg>
              </button>
            </th>
            <th
              aria-sort="none"
              scope="col"
            >
              <button
                aria-label="field3"
                class="kfp-viewer-table-sort"
              >
                field3
                <svg
                  aria-hidden="true"
                  class="lucide lucide-arrow-up-down"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21 16-4 4-4-4"
                  />
                  <path
                    d="M17 20V4"
                  />
                  <path
                    d="m3 8 4-4 4 4"
                  />
                  <path
                    d="M7 4v16"
                  />
                </svg>
              </button>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="kfp-viewer-table-data"
          >
            <td>
              col1
            </td>
            <td>
              col2
            </td>
            <td>
              col3
            </td>
          </tr>
          <tr
            class="kfp-viewer-table-data"
          >
            <td>
              col4
            </td>
            <td>
              col5
            </td>
            <td>
              col6
            </td>
          </tr>
          <tr
            style="height: 240px;"
          >
            <td
              colspan="3"
            />
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="kfp-viewer-table-pagination"
    >
      <label>
        Rows per page
        <select
          class="kfp-viewer-select"
        >
          <option
            value="10"
          >
            10
          </option>
          <option
            value="25"
          >
            25
          </option>
          <option
            value="50"
          >
            50
          </option>
          <option
            value="100"
          >
            100
          </option>
        </select>
      </label>
      <span
        aria-live="polite"
      >
        1–2 of 2
      </span>
      <button
        aria-label="Go to previous page"
        class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-transparent text-foreground-2 hover:bg-muted hover:text-foreground size-[34px] p-0"
        data-disabled=""
        data-slot="button"
        disabled=""
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-left"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
      </button>
      <button
        aria-label="Go to next page"
        class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-transparent text-foreground-2 hover:bg-muted hover:text-foreground size-[34px] p-0"
        data-disabled=""
        data-slot="button"
        disabled=""
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PagedTable > renders simple data without labels 1`] = `
<DocumentFragment>
  <div
    class="kfp-viewer-table "
  >
    <div
      aria-label="Table output"
      class="kfp-viewer-table-scroll"
      role="region"
      tabindex="0"
    >
      <table
        aria-label="Table output"
      >
        <tbody
          class="kfp-viewer-table-unlabelled"
        >
          <tr
            class="kfp-viewer-table-data"
          >
            <td>
              col1
            </td>
            <td>
              col2
            </td>
            <td>
              col3
            </td>
          </tr>
          <tr
            class="kfp-viewer-table-data"
          >
            <td>
              col4
            </td>
            <td>
              col5
            </td>
            <td>
              col6
            </td>
          </tr>
          <tr
            style="height: 240px;"
          >
            <td
              colspan="3"
            />
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="kfp-viewer-table-pagination"
    >
      <label>
        Rows per page
        <select
          class="kfp-viewer-select"
        >
          <option
            value="10"
          >
            10
          </option>
          <option
            value="25"
          >
            25
          </option>
          <option
            value="50"
          >
            50
          </option>
          <option
            value="100"
          >
            100
          </option>
        </select>
      </label>
      <span
        aria-live="polite"
      >
        1–2 of 2
      </span>
      <button
        aria-label="Go to previous page"
        class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-transparent text-foreground-2 hover:bg-muted hover:text-foreground size-[34px] p-0"
        data-disabled=""
        data-slot="button"
        disabled=""
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-left"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
      </button>
      <button
        aria-label="Go to next page"
        class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-transparent text-foreground-2 hover:bg-muted hover:text-foreground size-[34px] p-0"
        data-disabled=""
        data-slot="button"
        disabled=""
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PagedTable > sorts on first column ascending 1`] = `
<DocumentFragment>
  <div
    class="kfp-viewer-table "
  >
    <div
      aria-label="Table output"
      class="kfp-viewer-table-scroll"
      role="region"
      tabindex="0"
    >
      <table
        aria-label="Table output"
      >
        <thead>
          <tr>
            <th
              aria-sort="ascending"
              scope="col"
            >
              <button
                aria-label="field1"
                class="kfp-viewer-table-sort"
              >
                field1
                <svg
                  aria-hidden="true"
                  class="lucide lucide-arrow-up"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m5 12 7-7 7 7"
                  />
                  <path
                    d="M12 19V5"
                  />
                </svg>
              </button>
            </th>
            <th
              aria-sort="none"
              scope="col"
            >
              <button
                aria-label="field2"
                class="kfp-viewer-table-sort"
              >
                field2
                <svg
                  aria-hidden="true"
                  class="lucide lucide-arrow-up-down"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21 16-4 4-4-4"
                  />
                  <path
                    d="M17 20V4"
                  />
                  <path
                    d="m3 8 4-4 4 4"
                  />
                  <path
                    d="M7 4v16"
                  />
                </svg>
              </button>
            </th>
            <th
              aria-sort="none"
              scope="col"
            >
              <button
                aria-label="field3"
                class="kfp-viewer-table-sort"
              >
                field3
                <svg
                  aria-hidden="true"
                  class="lucide lucide-arrow-up-down"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21 16-4 4-4-4"
                  />
                  <path
                    d="M17 20V4"
                  />
                  <path
                    d="m3 8 4-4 4 4"
                  />
                  <path
                    d="M7 4v16"
                  />
                </svg>
              </button>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="kfp-viewer-table-data"
          >
            <td>
              col1
            </td>
            <td>
              col2
            </td>
            <td>
              col3
            </td>
          </tr>
          <tr
            class="kfp-viewer-table-data"
          >
            <td>
              col4
            </td>
            <td>
              col5
            </td>
            <td>
              col6
            </td>
          </tr>
          <tr
            style="height: 240px;"
          >
            <td
              colspan="3"
            />
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="kfp-viewer-table-pagination"
    >
      <label>
        Rows per page
        <select
          class="kfp-viewer-select"
        >
          <option
            value="10"
          >
            10
          </option>
          <option
            value="25"
          >
            25
          </option>
          <option
            value="50"
          >
            50
          </option>
          <option
            value="100"
          >
            100
          </option>
        </select>
      </label>
      <span
        aria-live="polite"
      >
        1–2 of 2
      </span>
      <button
        aria-label="Go to previous page"
        class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-transparent text-foreground-2 hover:bg-muted hover:text-foreground size-[34px] p-0"
        data-disabled=""
        data-slot="button"
        disabled=""
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-left"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
      </button>
      <button
        aria-label="Go to next page"
        class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-transparent text-foreground-2 hover:bg-muted hover:text-foreground size-[34px] p-0"
        data-disabled=""
        data-slot="button"
        disabled=""
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PagedTable > sorts on first column descending 1`] = `
<DocumentFragment>
  <div
    class="kfp-viewer-table "
  >
    <div
      aria-label="Table output"
      class="kfp-viewer-table-scroll"
      role="region"
      tabindex="0"
    >
      <table
        aria-label="Table output"
      >
        <thead>
          <tr>
            <th
              aria-sort="descending"
              scope="col"
            >
              <button
                aria-label="field1"
                class="kfp-viewer-table-sort"
              >
                field1
                <svg
                  aria-hidden="true"
                  class="lucide lucide-arrow-down"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 5v14"
                  />
                  <path
                    d="m19 12-7 7-7-7"
                  />
                </svg>
              </button>
            </th>
            <th
              aria-sort="none"
              scope="col"
            >
              <button
                aria-label="field2"
                class="kfp-viewer-table-sort"
              >
                field2
                <svg
                  aria-hidden="true"
                  class="lucide lucide-arrow-up-down"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21 16-4 4-4-4"
                  />
                  <path
                    d="M17 20V4"
                  />
                  <path
                    d="m3 8 4-4 4 4"
                  />
                  <path
                    d="M7 4v16"
                  />
                </svg>
              </button>
            </th>
            <th
              aria-sort="none"
              scope="col"
            >
              <button
                aria-label="field3"
                class="kfp-viewer-table-sort"
              >
                field3
                <svg
                  aria-hidden="true"
                  class="lucide lucide-arrow-up-down"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21 16-4 4-4-4"
                  />
                  <path
                    d="M17 20V4"
                  />
                  <path
                    d="m3 8 4-4 4 4"
                  />
                  <path
                    d="M7 4v16"
                  />
                </svg>
              </button>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="kfp-viewer-table-data"
          >
            <td>
              col4
            </td>
            <td>
              col5
            </td>
            <td>
              col6
            </td>
          </tr>
          <tr
            class="kfp-viewer-table-data"
          >
            <td>
              col1
            </td>
            <td>
              col2
            </td>
            <td>
              col3
            </td>
          </tr>
          <tr
            style="height: 240px;"
          >
            <td
              colspan="3"
            />
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="kfp-viewer-table-pagination"
    >
      <label>
        Rows per page
        <select
          class="kfp-viewer-select"
        >
          <option
            value="10"
          >
            10
          </option>
          <option
            value="25"
          >
            25
          </option>
          <option
            value="50"
          >
            50
          </option>
          <option
            value="100"
          >
            100
          </option>
        </select>
      </label>
      <span
        aria-live="polite"
      >
        1–2 of 2
      </span>
      <button
        aria-label="Go to previous page"
        class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-transparent text-foreground-2 hover:bg-muted hover:text-foreground size-[34px] p-0"
        data-disabled=""
        data-slot="button"
        disabled=""
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-left"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
      </button>
      <button
        aria-label="Go to next page"
        class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-transparent text-foreground-2 hover:bg-muted hover:text-foreground size-[34px] p-0"
        data-disabled=""
        data-slot="button"
        disabled=""
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
